Bugfix: Form field labels were not clickable because they're covered by inner div of label text

--- a/src/components/Conversion/styles.module.scss
+++ b/src/components/Conversion/styles.module.scss
@@ -71,6 +71,7 @@
   transform: translate(0, -50%);
   padding: 0 calc(2 * var(--conversion--form--padding));
   color: var(--conversion--form-label--color);
+  pointer-events: none;
 }
 
 .LabelRequired {
